--- a/notebooks/custom_cnn.ipynb
+++ b/notebooks/custom_cnn.ipynb
@@ -96,34 +96,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "dae16edf",
       "metadata": {
         "id": "dae16edf"
       },
       "outputs": [],
       "source": [
+        "IMAGENET_MEAN = [0.485, 0.456, 0.406]\n",
+        "IMAGENET_STD  = [0.229, 0.224, 0.225]\n",
+        "\n",
         "data_transforms = {\n",
-        "    'train': transforms.Compose([\n",
-        "        transforms.RandomResizedCrop(150),\n",
+        "    \"train\": transforms.Compose([\n",
+        "        transforms.RandomRotation(20),\n",
         "        transforms.RandomHorizontalFlip(),\n",
+        "        transforms.RandomVerticalFlip(),\n",
+        "        transforms.RandomResizedCrop(224, scale=(0.8, 1.0)),\n",
+        "        transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
         "        transforms.ToTensor(),\n",
-        "        #transforms.Normalize\n",
+        "        transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
         "    ]),\n",
         "\n",
-        "    # Just normalization for validation\n",
-        "    'valid': transforms.Compose([\n",
-        "        transforms.Resize(150),\n",
-        "        transforms.CenterCrop(150),\n",
+        "    \"valid\": transforms.Compose([\n",
+        "        transforms.Resize((224, 224)),\n",
         "        transforms.ToTensor(),\n",
-        "\n",
+        "        transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
         "    ]),\n",
-        "}"
+        "\n",
+        "    \"test\": transforms.Compose([\n",
+        "        transforms.Resize((224, 224)),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
+        "    ]),\n",
+        "}\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "1f95f48f",
       "metadata": {
         "colab": {
@@ -149,7 +159,7 @@
         "\n",
         "image_dataset = {x: datasets.ImageFolder(os.path.join(data_dir, x), data_transforms[x])\n",
         "               for x in ['train', 'valid']}\n",
-        "dataloaders = {x: DataLoader(image_dataset[x], batch_size=8, shuffle=True, num_workers=2, persistent_workers=True)\n",
+        "dataloaders = {x: DataLoader(image_dataset[x], batch_size=8, shuffle=True if x==\"train\" else False, num_workers=2, persistent_workers=True)\n",
         "               for x in ['train', 'valid']}\n",
         "\n",
         "dataset_sizes = {x: len(image_dataset[x]) for x in ['train', 'valid']}\n",
@@ -163,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "1823423b",
       "metadata": {
         "colab": {
@@ -182,15 +192,31 @@
         }
       ],
       "source": [
+        "def imshow(inp, title=None):\n",
+        "    \"\"\"Display image for Tensor.\"\"\"\n",
+        "    inp = inp.numpy().transpose((1, 2, 0))\n",
+        "    mean = np.array([0.485, 0.456, 0.406])\n",
+        "    std = np.array([0.229, 0.224, 0.225])\n",
+        "    inp = std * inp + mean\n",
+        "    inp = np.clip(inp, 0, 1)\n",
+        "    plt.imshow(inp)\n",
+        "    if title is not None:\n",
+        "        plt.title(title)\n",
+        "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
+        "\n",
+        "\n",
         "# Get a batch of training data\n",
         "inputs, classes = next(iter(dataloaders['train']))\n",
         "\n",
-        "print(f'Input batch shape: {inputs.size()}')"
+        "# Make a grid from batch\n",
+        "out = torchvision.utils.make_grid(inputs)\n",
+        "\n",
+        "imshow(out, title=[class_names[x] for x in classes])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "73fba728",
       "metadata": {
         "id": "73fba728"
@@ -229,7 +255,7 @@
         "\n",
         "\n",
         "class ConvBlock(nn.Module):\n",
-        "    \"\"\"ConvBlock: SepConv -> BN -> MaxPool -> SEBlock\"\"\"\n",
+        "    \"\"\"ConvBlock: SepConv -> BN -> ReLU -> MaxPool -> SEBlock\"\"\"\n",
         "    def __init__(self, in_ch, out_ch):\n",
         "        super().__init__()\n",
         "        self.seq = nn.Sequential(\n",
@@ -316,6 +342,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "6257f093",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class EarlyStopping:\n",
+        "    def __init__(self, patience=5, min_delta=0.5):\n",
+        "        self.patience = patience\n",
+        "        self.min_delta = min_delta\n",
+        "        self.counter = 0\n",
+        "        self.best_loss = float(\"inf\")\n",
+        "        self.early_stop = False\n",
+        "\n",
+        "    def step(self, val_loss):\n",
+        "        if val_loss < self.best_loss - self.min_delta:\n",
+        "            self.best_loss = val_loss\n",
+        "            self.counter = 0\n",
+        "        else:\n",
+        "            self.counter += 1\n",
+        "\n",
+        "        if self.counter >= self.patience:\n",
+        "            self.early_stop = True"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 10,
       "id": "2ac079c9",
       "metadata": {
@@ -375,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "487b120c",
       "metadata": {
         "colab": {
@@ -4614,7 +4666,10 @@
       "source": [
         "NUM_EPOCHS = 300\n",
         "best_val_acc = 0.0\n",
-        "best_model_path = 'best_custom_model.pth'\n",
+        "best_model_path = 'best_custom_model.h5'\n",
+        "\n",
+        "early_stopper = EarlyStopping(patience=5)\n",
+        "\n",
         "history = {'train_loss': [], 'train_acc': [], 'val_loss': [], 'val_acc': []}\n",
         "start_time = time.time()\n",
         "\n",
@@ -4624,6 +4679,8 @@
         "    val_loss, val_acc, val_preds, val_labels = validate_one_epoch(model, dataloaders['valid'], criterion, device)\n",
         "\n",
         "    scheduler.step(val_loss)\n",
+        "    early_stopper.step(val_loss)\n",
+        "\n",
         "    history['train_loss'].append(train_loss)\n",
         "    history['train_acc'].append(train_acc)\n",
         "    history['val_loss'].append(val_loss)\n",
